tests/sumo/errors/person/unconnected_walk/errors.sumo
Error: Disconnected plan for person 'p1' (beg != end).
Quitting (on error).
